# omnillm

./: .gitignore  .golangci.yml  AGENTS.md  MATERIAL_UI.md  Makefile  README.md  README.zh-CN.md  TESTING_COMPLETE.md  dev-go.ts  dev.ts  entrypoint.sh  eslint.config.js  go.mod  go.sum  main.go  omni  omni-dev.ts  package-lock.json  package.json  run-ui-tests.sh  setup-make.bat  start-dev.bat  start-go-server.sh  start.bat  tsconfig.json  tsdown.config.ts  tui_at_commit.go
desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs
docs/: ADDING_A_PROVIDER.md  ALIBABA_SDK_MIGRATION.md  ALIBABA_UPSTREAM_STREAMING.md  CIF_MIGRATION.md  CIF_TESTS.md  CONFIG_TEMPLATES.md  COPILOT_ANTHROPIC_STREAMING_BUFFER_FIX.md  COPILOT_CLAUDE_TOOL_USE_FIX.md  COPILOT_CLAUDE_TOOL_USE_PARSE_FIX.md  COPILOT_GPT5_MINI_CHAT_COMPLETIONS.md  DEEPSEEK_V4_TOOL_CALL_COMPAT.md  FRONTEND_TESTS_SUMMARY.md  GLM_OMNICODE_TOOL_LOOP_FIX.md  LAYOUT_IMPROVEMENTS.md  OMNICODE_GOOGLE_ADK_MESSAGES_ONLY.md  OMNICODE_MULTI_AGENT_ORCHESTRATION.md  OPENAI_USER_ID_BUILD_FIX.md  OPENSPEC_BUILTIN_COMMAND_SURFACE.md  OmniLLM_CodeAgent_Test_Plan.html  PRACTICE_VALIDATION_2026-05-11.md  README_ENHANCEMENT.md  REORGANIZATION.md  RESPONSES_TOOL_HISTORY_ROUNDTRIP_FIX.md  SCHEDULING_RUNTIME_IMPLEMENTATION.md  SPECDRIVEN_BUILTIN_SKILL.md  SPECKIT_CLEAN_LIFECYCLE.md  STRUCTURED_EDITORS.md  (+7 more)
(+685 files in other folders)
