[package]
name = "omnillm-desktop"
version = "0.0.1"
description = "Tauri desktop wrapper around the OmniLLM admin UI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "omnillm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
